--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -34,10 +34,6 @@
 
         <Button
             style="@style/GreenButton"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            android:onClick="startQuiz"
-            android:text="Start" />
+            android:onClick="startQuiz" />
     </LinearLayout>
-
 </RelativeLayout>
