--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#0e3367</color>
     <color name="colorAccent">#aeaeae</color>
     <color name="buttonColor">#77c159</color>
-    <color name="textColor">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 </resources>
