--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -9,11 +9,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="90dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:adjustViewBounds="true"
+        style="@style/BottomAndroidImage"
         android:src="@drawable/android_robot2" />
 
     <ScrollView
@@ -250,6 +246,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/submitQuiz"
                     style="@style/GreenButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
